--- a/public/index.html
+++ b/public/index.html
@@ -64,11 +64,18 @@
     </div>
     <!-- 查詢選項結束 -->
 
-    <!-- 修改：圖表容器移至表格前方 -->
-    <div class="chart-container enhanced-chart" v-if="result.length">
-      <h2 class="chart-title">{{ selectedName }} 價格走勢圖</h2>
-      <!-- 新增：圖表 canvas 元素 -->
-      <canvas id="bigmacChart"></canvas>
+    <!-- 修改：圖表容器移至表格前方，支援雙圖表並排顯示 -->
+    <div class="charts-container" v-if="result.length">
+      <div class="chart-container enhanced-chart">
+        <h2 class="chart-title">{{ selectedName }} 當地價格走勢圖</h2>
+        <!-- 新增：圖表 canvas 元素 -->
+        <canvas id="localPriceChart"></canvas>
+      </div>
+      <div class="chart-container enhanced-chart">
+        <h2 class="chart-title">{{ selectedName }} 美元調整價格走勢圖</h2>
+        <!-- 新增：圖表 canvas 元素 -->
+        <canvas id="usdAdjustedChart"></canvas>
+      </div>
     </div>
 
     <!-- 查詢結果區域美化 -->
@@ -334,8 +341,14 @@
     }
 
     /* 7. CHART CONTAINER */
-    .chart-container {
+    .charts-container {
+      display: flex;
+      gap: var(--spacing-lg);
       margin: var(--spacing-2xl);
+    }
+
+    .chart-container {
+      flex: 1;
       padding: var(--spacing-2xl);
       background: var(--white);
       border-radius: var(--radius-xl);
@@ -356,9 +369,9 @@
     }
 
     .chart-title {
-      font-size: var(--font-size-2xl);
+      font-size: var(--font-size-xl);
       font-weight: 700;
-      margin-bottom: var(--spacing-xl);
+      margin-bottom: var(--spacing-lg);
       text-align: center;
       background: linear-gradient(135deg, var(--primary-blue) 0%, var(--secondary-green) 100%);
       -webkit-background-clip: text;
@@ -367,7 +380,7 @@
     }
 
     .chart-container canvas {
-      max-height: 450px;
+      max-height: 400px;
       border-radius: var(--radius-md);
     }
 
@@ -477,6 +490,11 @@
         padding: var(--spacing-xl);
       }
 
+      .charts-container {
+        margin: var(--spacing-xl);
+        gap: var(--spacing-md);
+      }
+
       .chart-container, .table-container {
         margin: var(--spacing-xl);
       }
@@ -513,6 +531,11 @@
         min-width: 140px;
       }
 
+      .charts-container {
+        flex-direction: column;
+        margin: var(--spacing-lg);
+      }
+
       .chart-container, .table-container {
         margin: var(--spacing-lg);
       }
@@ -537,6 +560,10 @@
 
       h1 {
         font-size: var(--font-size-2xl);
+      }
+
+      .charts-container {
+        margin: var(--spacing-md);
       }
 
       .chart-container, .table-container {
@@ -793,9 +820,9 @@
           },
           // 新增：根據查詢結果繪製主國家與比較國家的價格走勢
           renderChart() {
-            // 註解：繪製 Chart.js 折線圖，顯示主國家與比較國家 local_price 走勢
-            const ctx = document.getElementById('bigmacChart');
-            if (!ctx) {
+            const ctxLocal = document.getElementById('localPriceChart');
+            const ctxUSD = document.getElementById('usdAdjustedChart');
+            if (!ctxLocal || !ctxUSD) {
               console.log('找不到圖表 canvas 元素');
               return;
             }
@@ -806,75 +833,186 @@
               return;
             }
 
-            // 銷毀舊圖表
-            if (this.chartInstance) {
-              this.chartInstance.destroy();
-              this.chartInstance = null;
-            }
+            // 銷毀舊圖表實例
+            Chart.getChart('localPriceChart')?.destroy();
+            Chart.getChart('usdAdjustedChart')?.destroy();
 
             // 準備主國家資料
-            const mainData = this.sortedResult.map(row => row.local_price);
+            const mainLocalData = this.sortedResult.map(row => row.local_price);
+            const mainUSDData = this.sortedResult.map(row => row.USD_adjusted || row.dollar_price);
             const labels = this.sortedResult.map(row => row.date);
 
-            // 準備比較國家資料
-            const compareData = this.sortedCompareResult.map(row => row.local_price);
-
-            console.log('主國家資料:', mainData);
+            console.log('主國家當地價格資料:', mainLocalData);
+            console.log('主國家USD調整資料:', mainUSDData);
             console.log('標籤:', labels);
-            console.log('比較國家資料:', compareData);
 
-            // Chart.js 配置
-            const datasets = [
+            // 當地價格圖表配置
+            const datasetsLocal = [
               {
-                label: this.selectedName,
-                data: mainData,
-                borderColor: '#007bff',
-                backgroundColor: 'rgba(0,123,255,0.1)',
+                label: `${this.selectedName} 當地價格`,
+                data: mainLocalData,
+                borderColor: 'var(--primary-blue)',
+                backgroundColor: 'rgba(37, 99, 235, 0.1)',
                 tension: 0.2,
-                fill: false
+                fill: false,
+                pointBackgroundColor: 'var(--primary-blue)',
+                pointBorderColor: '#fff',
+                pointBorderWidth: 2
+              }
+            ];
+
+            // USD調整價格圖表配置
+            const datasetsUSD = [
+              {
+                label: `${this.selectedName} USD調整價格`,
+                data: mainUSDData,
+                borderColor: 'var(--secondary-green)',
+                backgroundColor: 'rgba(5, 150, 105, 0.1)',
+                tension: 0.2,
+                fill: false,
+                pointBackgroundColor: 'var(--secondary-green)',
+                pointBorderColor: '#fff',
+                pointBorderWidth: 2
               }
             ];
 
             // 如果有比較國家資料，加入比較線
             if (this.compareCountry && this.sortedCompareResult.length > 0) {
-              datasets.push({
-                label: this.compareCountry,
-                data: compareData,
+              const compareLocalData = this.sortedCompareResult.map(row => row.local_price);
+              const compareUSDData = this.sortedCompareResult.map(row => row.USD_adjusted || row.dollar_price);
+
+              datasetsLocal.push({
+                label: `${this.compareCountry} 當地價格`,
+                data: compareLocalData,
                 borderColor: '#ff9800',
-                backgroundColor: 'rgba(255,152,0,0.1)',
+                backgroundColor: 'rgba(255, 152, 0, 0.1)',
                 tension: 0.2,
-                fill: false
+                fill: false,
+                pointBackgroundColor: '#ff9800',
+                pointBorderColor: '#fff',
+                pointBorderWidth: 2
+              });
+
+              datasetsUSD.push({
+                label: `${this.compareCountry} USD調整價格`,
+                data: compareUSDData,
+                borderColor: '#dc3545',
+                backgroundColor: 'rgba(220, 53, 69, 0.1)',
+                tension: 0.2,
+                fill: false,
+                pointBackgroundColor: '#dc3545',
+                pointBorderColor: '#fff',
+                pointBorderWidth: 2
               });
             }
 
+            const chartOptions = {
+              responsive: true,
+              maintainAspectRatio: false,
+              interaction: {
+                intersect: false,
+                mode: 'index'
+              },
+              plugins: {
+                legend: {
+                  display: true,
+                  position: 'top'
+                },
+                tooltip: {
+                  backgroundColor: 'rgba(0, 0, 0, 0.8)',
+                  titleColor: '#fff',
+                  bodyColor: '#fff',
+                  borderColor: 'var(--primary-blue)',
+                  borderWidth: 1
+                }
+              },
+              scales: {
+                x: {
+                  title: {
+                    display: true,
+                    text: '日期',
+                    font: { weight: 'bold' }
+                  },
+                  grid: {
+                    color: 'rgba(0, 0, 0, 0.1)'
+                  }
+                },
+                y: {
+                  title: {
+                    display: true,
+                    font: { weight: 'bold' }
+                  },
+                  grid: {
+                    color: 'rgba(0, 0, 0, 0.1)'
+                  }
+                }
+              }
+            };
+
             try {
-              this.chartInstance = new Chart(ctx, {
+              // 繪製當地價格走勢圖
+              new Chart(ctxLocal, {
                 type: 'line',
                 data: {
                   labels: labels,
-                  datasets: datasets
+                  datasets: datasetsLocal
                 },
                 options: {
-                    responsive: true,
-                    maintainAspectRatio: false,
-                    plugins: {
-                        legend: {display: true},
-                        title: {
-                            display: true,
-                            text: 'Big Mac 當地價格走勢'
-                        }
-                    },
-                    scales: {
-                        x: {
-                            title: {display: true, text: '日期'}
-                        },
-                        y: {
-                            title: {display: true, text: '當地價格'}
-                        }
+                  ...chartOptions,
+                  scales: {
+                    ...chartOptions.scales,
+                    y: {
+                      ...chartOptions.scales.y,
+                      title: {
+                        display: true,
+                        text: '當地價格',
+                        font: { weight: 'bold' }
+                      }
                     }
+                  },
+                  plugins: {
+                    ...chartOptions.plugins,
+                    title: {
+                      display: true,
+                      text: 'Big Mac 當地價格走勢',
+                      font: { size: 16, weight: 'bold' }
+                    }
+                  }
                 }
               });
-              console.log('圖表已成功建立');
+
+              // 繪製美元調整價格走勢圖
+              new Chart(ctxUSD, {
+                type: 'line',
+                data: {
+                  labels: labels,
+                  datasets: datasetsUSD
+                },
+                options: {
+                  ...chartOptions,
+                  scales: {
+                    ...chartOptions.scales,
+                    y: {
+                      ...chartOptions.scales.y,
+                      title: {
+                        display: true,
+                        text: 'USD調整價格',
+                        font: { weight: 'bold' }
+                      }
+                    }
+                  },
+                  plugins: {
+                    ...chartOptions.plugins,
+                    title: {
+                      display: true,
+                      text: 'Big Mac USD調整價格走勢',
+                      font: { size: 16, weight: 'bold' }
+                    }
+                  }
+                }
+              });
+
+              console.log('雙圖表已成功建立');
             } catch (error) {
               console.error('建立圖表時發生錯誤:', error);
             }
