--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
   <div id="app">
-    <h1>Big Mac Index 查詢 (Vue3)</h1>
+    <h1>Big Mac Index 查詢</h1>
     <!-- 在 <h1>Big Mac Index 查詢 (Vue3)</h1> 後添加 -->
     <div class="intro-section">
       <p>
@@ -72,7 +72,7 @@
         <canvas id="localPriceChart"></canvas>
       </div>
       <div class="chart-container enhanced-chart">
-        <h2 class="chart-title">{{ selectedName }} 美元調整價格走勢圖</h2>
+        <h2 class="chart-title">{{ selectedName }} 美元價格走勢圖</h2>
         <!-- 新增：圖表 canvas 元素 -->
         <canvas id="usdAdjustedChart"></canvas>
       </div>
@@ -92,6 +92,7 @@
               <th>當地價格</th>
               <th>匯率</th>
               <th>美元價格</th>
+
             </tr>
           </thead>
           <tbody>
@@ -102,6 +103,7 @@
               <td>{{ row.local_price }}</td>
               <td>{{ row.dollar_ex }}</td>
               <td>{{ row.dollar_price }}</td>
+
             </tr>
           </tbody>
         </table>
@@ -839,11 +841,11 @@
 
             // 準備主國家資料
             const mainLocalData = this.sortedResult.map(row => row.local_price);
-            const mainUSDData = this.sortedResult.map(row => row.USD_adjusted || row.dollar_price);
+            const mainDollarData = this.sortedResult.map(row => row.dollar_price);
             const labels = this.sortedResult.map(row => row.date);
 
             console.log('主國家當地價格資料:', mainLocalData);
-            console.log('主國家USD調整資料:', mainUSDData);
+            console.log('主國家美元價格資料:', mainDollarData);
             console.log('標籤:', labels);
 
             // 當地價格圖表配置
@@ -861,11 +863,11 @@
               }
             ];
 
-            // USD調整價格圖表配置
-            const datasetsUSD = [
+            // 美元價格圖表配置
+            const datasetsDollar = [
               {
-                label: `${this.selectedName} USD調整價格`,
-                data: mainUSDData,
+                label: `${this.selectedName} 美元價格`,
+                data: mainDollarData,
                 borderColor: 'var(--secondary-green)',
                 backgroundColor: 'rgba(5, 150, 105, 0.1)',
                 tension: 0.2,
@@ -879,7 +881,7 @@
             // 如果有比較國家資料，加入比較線
             if (this.compareCountry && this.sortedCompareResult.length > 0) {
               const compareLocalData = this.sortedCompareResult.map(row => row.local_price);
-              const compareUSDData = this.sortedCompareResult.map(row => row.USD_adjusted || row.dollar_price);
+              const compareDollarData = this.sortedCompareResult.map(row => row.dollar_price);
 
               datasetsLocal.push({
                 label: `${this.compareCountry} 當地價格`,
@@ -893,9 +895,9 @@
                 pointBorderWidth: 2
               });
 
-              datasetsUSD.push({
-                label: `${this.compareCountry} USD調整價格`,
-                data: compareUSDData,
+              datasetsDollar.push({
+                label: `${this.compareCountry} 美元價格`,
+                data: compareDollarData,
                 borderColor: '#dc3545',
                 backgroundColor: 'rgba(220, 53, 69, 0.1)',
                 tension: 0.2,
@@ -981,12 +983,12 @@
                 }
               });
 
-              // 繪製美元調整價格走勢圖
+              // 繪製美元價格走勢圖
               new Chart(ctxUSD, {
                 type: 'line',
                 data: {
                   labels: labels,
-                  datasets: datasetsUSD
+                  datasets: datasetsDollar
                 },
                 options: {
                   ...chartOptions,
@@ -996,7 +998,7 @@
                       ...chartOptions.scales.y,
                       title: {
                         display: true,
-                        text: 'USD調整價格',
+                        text: '美元價格',
                         font: { weight: 'bold' }
                       }
                     }
@@ -1005,7 +1007,7 @@
                     ...chartOptions.plugins,
                     title: {
                       display: true,
-                      text: 'Big Mac USD調整價格走勢',
+                      text: 'Big Mac 美元價格走勢',
                       font: { size: 16, weight: 'bold' }
                     }
                   }
